src/test/ui/parser/suggest-assoc-const.stderr
error: non-item in item list
  --> $DIR/suggest-assoc-const.rs:4:5
   |
LL |     let _X: i32;
   |     ^^^ help: consider using `const` instead of `let` for associated const: `const`

error: aborting due to previous error

